# error-context

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/y/: error.h  stacktrace.h  unique-c-ptr.h
sources/: CMakeLists.txt  demangle.cpp  error-handlers.cpp  error.cpp  stacktrace.cpp
src/: CMakeLists.txt  demangle.cpp  error.cpp  stacktrace.cpp
src/include/y/: demangle.h  error.h  unique-c-ptr.h
tests/: CMakeLists.txt  details.h  tests.cpp  throw-runtime-error.cpp  throw-runtime-error.h  throwRuntimeError.cpp  throwRuntimeError.h
tst/: CMakeLists.txt  details.h  test.cpp
